<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SettingsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/theme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.93"
        app:layout_constraintVertical_bias="0.05"
        android:background="@drawable/back_settings"
        android:elevation="@dimen/_1sdp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/ic_art"
            app:layout_constraintTop_toTopOf="@id/switch_theme"
            app:layout_constraintBottom_toBottomOf="@id/switch_theme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/switch_theme"
            app:layout_constraintHorizontal_bias="0.04"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/icon"
            app:layout_constraintRight_toLeftOf="@id/switch_theme"
            app:layout_constraintTop_toTopOf="@id/switch_theme"
            app:layout_constraintBottom_toBottomOf="@id/switch_theme"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingRight="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12sdp"
            android:text="@string/light_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/switch_theme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:textSize="14sp"
            app:on="false"
            app:textOn="@string/dark"
            app:textOff="@string/light"
            app:colorOn="@color/button_back"
            app:colorBorder="@color/button_back"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lan"
        android:layout_marginTop="@dimen/_12sdp"
       app:layout_constraintTop_toBottomOf="@id/theme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.93"
        app:layout_constraintVertical_bias="0.03"
        android:background="@drawable/back_settings"
        android:elevation="@dimen/_1sdp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:id="@+id/icon_lan"
            android:src="@drawable/ic_internet"
            app:layout_constraintTop_toTopOf="@id/text_lan"
            app:layout_constraintBottom_toBottomOf="@id/text_lan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_lan"
            app:layout_constraintHorizontal_bias="0.04"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/icon_lan"
            app:layout_constraintRight_toLeftOf="@id/text_lan"
            app:layout_constraintTop_toTopOf="@id/text_lan"
            app:layout_constraintBottom_toBottomOf="@id/text_lan"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingRight="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12sdp"
            android:text="Темный режим"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_lan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/textColor"
            android:gravity="right"
            android:text="Русский"
            app:colorBorder="@color/button_back"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/log_out"
        app:layout_constraintTop_toBottomOf="@id/lan"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.93"
        app:layout_constraintVertical_bias="0.03"
        android:background="@drawable/back_settings"
        android:elevation="@dimen/_1sdp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:id="@+id/log_out_icon"
            android:src="@drawable/ic_logout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/log_out_icon"
            android:ellipsize="end"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.75"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintTop_toTopOf="@id/log_out"
            app:layout_constraintBottom_toBottomOf="@id/log_out"
            android:maxLines="1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12sdp"
            android:text="@string/log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>