<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/dialog_back"
        android:layout_width="@dimen/_270sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_anim"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.5"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="0dp"
            app:layout_constraintVertical_bias="0.1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/log_out"
            app:lottie_loop="true"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/clearDialog_text"
            app:layout_constraintTop_toBottomOf="@id/lottie_anim"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.9"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal"
            android:text="@string/log_out_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/ok_btn"
            app:layout_constraintTop_toBottomOf="@id/clearDialog_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintHorizontal_bias="0.93"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:background="@drawable/button_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/approval"
                android:textStyle="normal"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/close_button"
            app:layout_constraintTop_toTopOf="@id/ok_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ok_btn"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_5sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintHorizontal_bias="0.95"
            android:padding="@dimen/_4sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:background="@drawable/button_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/cancelling"
                android:textStyle="normal"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>